@@ -27,13 +27,15 @@ $ -> Language fix or change
 
 ; Below is merged into v3.1.2
 
+17-Jul-2013 Jean-Marie Simonet
+ # [#31476] Remove unneeded GROUP BY and fix duplicate article display. Thanks Thomas Hunziker
+
 14-Jul-2013 Jean-Marie Simonet
  # [#31455] Regression by [#31278]. Thanks Beat
 
 12-Jul-2013 Jean-Marie Simonet
  # [#31362] Various PHP notices and strict errors. Thanks Mark Dexter
  # [#31376] JToolbar layout change breaks mobile. Thanks Roberto Segura
-
 
 10-Jul-2013 Jean-Marie Simonet
  ^ [#31388] Admin login shows language option. Thanks Brian Teeman
